27 November 2007: Wouter
	- per suggestion in rfc2308, replaced default max-ttl value with 1 day.

22 November 2007: Wouter
	- noted EDNS in-the-middle dropping trouble as a TODO.
	  At this point theoretical, no user trouble has been reported.
	- added all default AS112 zones.
	- answers from local zone content.
		* positive answer, the rrset in question
		* nodata answer (exist, but not that type).
		* nxdomain answer (domain does not exist).
		* empty-nonterminal answer.
		* But not: wildcard, nsec, referral, rrsig, cname/dname,
			or additional section processing, NS put in auth.
	- test for correct working of static and transparent and couple
	  of important defaults (localhost, as112, reverses). 
	  Also checks deny and refuse settings.
	- fixup implicit zone generation and AA bit for NXDOMAIN on localdata.

21 November 2007: Wouter
	- local zone internal data setup.

20 November 2007: Wouter
	- 0.8 - str2list config support for double string config options.
	- local-zone and local-data options, config storage and documentation.

19 November 2007: Wouter
	- do not downcase NSEC and RRSIG for verification. Follows 
	  draft-ietf-dnsext-dnssec-bis-updates-06.txt.
	- fixup leaking unbound daemons at end of tests.
	- README file updated.
	- nice libevent not found error.
	- README talks about gnu make.
	- 0.8: unit test for addr_mask and fixups for it.
	  and unit test for addr_in_common().
	- 0.8: access-control config file element.
	  and unit test rpl replay file.
	- 0.8: fixup address reporting from netevent.

16 November 2007: Wouter
	- privilege separation is not needed in unbound at this time.
	  TODO item marked as such.
	- created beta-0.7 branch for support.
	- tagged 0.7 for beta release.
	- moved trunk to 0.8 for 0.8(auth features) development.
	- 0.8: access control list setup.

15 November 2007: Wouter
	- review fixups from Jelte.

14 November 2007: Wouter
	- testbed script does not recreate configure, since its in svn now.